--- a/TestLucene/TestLucene.csproj
+++ b/TestLucene/TestLucene.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00006" />
     <PackageReference Include="Lucene.Net.Queries" Version="4.8.0-beta00006" />
     <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00006" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
