--- a/TestLucene/TestLucene.csproj
+++ b/TestLucene/TestLucene.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00006" />
     <PackageReference Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00006" />
     <PackageReference Include="Lucene.Net.Queries" Version="4.8.0-beta00006" />
